refactor(special-models): extract all inner classes from SpecialChunkBuilder